--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -7,7 +7,7 @@
   --#{$check}__label--FontWeight: var(--#{$pf-global}--FontWeight--normal);
   --#{$check}__label--FontSize: var(--#{$pf-global}--FontSize--md);
   --#{$check}__label--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$check}__input--TranslateY: #{pf-size-prem(5px)}; // FF needs an offset
+  --#{$check}__input--TranslateY: #{pf-size-prem(1px)}; // nudge down up for perfect alignment
   --#{$check}__description--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__description--Color: var(--#{$pf-global}--Color--200);
   --#{$check}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
@@ -17,20 +17,12 @@
   --#{$check}__label-required--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__label-required--Color: var(--#{$pf-global}--danger-color--100);
 
-  display: inline-grid;
-  grid-template-columns: auto 1fr;
+  display: grid;
   grid-gap: var(--#{$check}--GridGap);
-  align-items: baseline;
+  grid-template-columns: auto 1fr;
 
   &.pf-m-standalone {
     --#{$check}--GridGap: 0;
-    --#{$check}__input--TranslateY: 0;
-
-    align-items: normal;
-
-    > .#{$check}__input {
-      align-self: center;
-    }
   }
 }
 
@@ -52,13 +44,6 @@
   margin-top: var(--#{$check}__body--MarginTop);
 }
 
-.#{$check}__input {
-  // FF misaligns checkboxes without a set height
-  // stylelint-disable property-no-vendor-prefix
-  -moz-transform: translateY(var(--#{$check}__input--TranslateY));
-  // stylelint-enable
-}
-
 .#{$check}__label,
 .#{$check}__input {
   justify-self: start;
@@ -74,6 +59,12 @@
 
     cursor: not-allowed;
   }
+}
+
+.#{$check}__label,
+.#{$check}__description,
+.#{$check}__body {
+  align-self: baseline;
 }
 
 .#{$check}__label-required {
