chore(workspace): update pf logo used in full page demos (#5750)
* chore(workspace): update pf logo used in full page demos

--- a/src/patternfly/demos/Masthead/masthead-template.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template.hbs
@@ -12,12 +12,7 @@
   {{/unless}}
   {{#> masthead-main}}
     {{#> masthead-brand}}
-      {{> brand
-        brand--attribute='style="--pf-v5-c-brand--Width: 180px; --pf-v5-c-brand--Width-on-md: 180px; --pf-v5-c-brand--Width-on-2xl: 220px;"'
-        brand--IsPicture="true"
-        brand--img-url--base='/assets/images/logo__pf--reverse--base.png'
-        brand--img-url='/assets/images/logo__pf--reverse--base.svg'
-        brand--img-url-on-md='/assets/images/logo__pf--reverse-on-md.svg'}}
+      {{> brand brand--attribute='src="/assets/images/pf-logo.svg" alt="PatternFly logo" style="--pf-v5-c-brand--Height:36px"'}}
     {{/masthead-brand}}
   {{/masthead-main}}
   {{> masthead-template-content}}
