--- a/src/patternfly/components/ContextSelector/__context-selector-menu-menu.hbs
+++ b/src/patternfly/components/ContextSelector/__context-selector-menu-menu.hbs
@@ -1,70 +1,70 @@
 {{#> context-selector-menu-menu}}
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item context-selector-menu-list-item--IsLink="true"}}
       Link
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       Action
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item context-selector-menu-list-item--IsLink="true" context-selector-menu-list-item--IsDisabled="true"}}
       Disabled link
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item context-selector-menu-list-item--IsDisabled="true"}}
       Disabled action
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       My project
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       OpenShift cluster
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       Production Ansible
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       AWS
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       Azure
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       My project
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       OpenShift cluster
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       Production Ansible
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       AWS
     {{/context-selector-menu-list-item}}
   </li>
-  <li>
+  <li role="menuitem">
     {{#> context-selector-menu-list-item}}
       Azure
     {{/context-selector-menu-list-item}}
