--- a/src/patternfly/components/ContextSelector/context-selector-menu-menu.hbs
+++ b/src/patternfly/components/ContextSelector/context-selector-menu-menu.hbs
@@ -1,5 +1,5 @@
 <ul class="{{pfv}}context-selector__menu-list{{#if context-selector-menu-list--modifier}} {{context-selector-menu-list--modifier}}{{/if}}"
-  role="list"
+  role="menu"
   {{#if context-selector-menu-list--attribute}}
     {{{context-selector-menu-list--attribute}}}
   {{/if}}>
