--- a/src/patternfly/components/Dropdown/dropdown-menu-list-item.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-menu-list-item.hbs
@@ -1,4 +1,5 @@
 <li class="{{#if dropdown-menu-list-item--modifier}} {{dropdown-menu-list-item--modifier}}{{/if}}"
+  role="none"
   {{#if dropdown-menu-list-item--attribute}}
     {{{dropdown-menu-list-item--attribute}}}
   {{/if}}>
