--- a/src/patternfly/components/OptionsMenu/options-menu-menu-item.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-menu-item.hbs
@@ -1,4 +1,4 @@
-<li>
+<li role="none">
   <button class="{{pfv}}options-menu__menu-item{{#if options-menu-menu-item--modifier}} {{options-menu-menu-item--modifier}}{{/if}}"
     type="button"
     {{#if options-menu-menu-item--attribute}}
