--- a/src/patternfly/components/OptionsMenu/options-menu-menu.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-menu.hbs
@@ -1,4 +1,5 @@
 <{{#if options-menu-menu--type}}{{options-menu-menu--type}}{{else}}ul{{/if}} class="{{pfv}}options-menu__menu{{#if options-menu--modifier}} {{options-menu--modifier}}{{/if}}"
+  role="listbox"
   aria-labelledby="{{options-menu--id}}-toggle"
   {{#unless options-menu--IsExpanded}}hidden{{/unless}}
   {{#if options-menu--attribute}}
