--- a/src/patternfly/components/OverflowMenu/overflow-menu-dropdown-item.hbs
+++ b/src/patternfly/components/OverflowMenu/overflow-menu-dropdown-item.hbs
@@ -1,4 +1,5 @@
 <li{{#if overflow-menu-dropdown-item--modifier}} class="{{overflow-menu-dropdown-item--modifier}}"{{/if}}
+  role="none"
   {{#if overflow-menu-dropdown-item--attribute}}
     {{{overflow-menu-dropdown-item--attribute}}}
   {{/if}}>
