--- a/src/patternfly/components/ProgressStepper/progress-stepper-step.hbs
+++ b/src/patternfly/components/ProgressStepper/progress-stepper-step.hbs
@@ -7,6 +7,7 @@
 {{~#if progress-stepper-step--IsInProgress}} pf-m-info{{/if}}
 {{~#if progress-stepper-step--IsPending}} pf-m-pending{{/if}}
 {{~#if progress-stepper-step--IsPendingAlt}} pf-m-pending{{/if}}"
+role="listitem"
   {{#if progress-stepper-step--attribute}}
     {{{progress-stepper-step--attribute}}}
   {{/if}}
