--- a/src/patternfly/components/Tabs/tabs-item.hbs
+++ b/src/patternfly/components/Tabs/tabs-item.hbs
@@ -11,6 +11,7 @@
   {{~#if tabs-item--IsAdd}} pf-m-add{{/if}}
   {{~#if tabs-item--IsOverflow}} pf-m-overflow{{/if}}
   {{~#if tabs-item--modifier}} {{tabs-item--modifier}}{{/if}}"
+  role="presentation"
   {{#if tabs-item--attribute}}
     {{{tabs-item--attribute}}}
   {{/if}}>
