--- a/src/patternfly/components/Dropdown/dropdown-menu-list.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-menu-list.hbs
@@ -1,4 +1,5 @@
 <ul class="{{#if dropdown-menu-list--modifier}} {{dropdown-menu-list--modifier}}{{/if}}"
+  role="none"
   {{#if dropdown-menu-list--attribute}}
     {{{dropdown-menu-list--attribute}}}
   {{/if}}>
