--- a/src/patternfly/components/Tabs/tabs-list.hbs
+++ b/src/patternfly/components/Tabs/tabs-list.hbs
@@ -1,4 +1,5 @@
 <ul class="{{pfv}}tabs__list{{#if tabs-list--modifier}} {{tabs-list--modifier}}{{/if}}"
+  role="tablist"
   {{#if tabs-list--attribute}}
     {{{tabs-list--attribute}}}
   {{/if}}>
