--- a/src/patternfly/components/Tabs/tabs.hbs
+++ b/src/patternfly/components/Tabs/tabs.hbs
@@ -1,4 +1,4 @@
-<{{#if tabs--type}}{{tabs--type}}{{else}}div{{/if}} class="{{pfv}}tabs
+<{{#if tabs--type}}{{tabs--type}}{{else}}div{{/if}} class="{{pfv}}tabs 
   {{~#if tabs--IsSecondary}} pf-m-secondary{{/if}}
   {{~#if tabs--IsVertical}} pf-m-vertical{{/if}}
   {{~#if tabs--IsExpandable}} pf-m-expandable{{/if}}
@@ -11,6 +11,7 @@
     {{{tabs--attribute}}}
   {{/if}}
   {{#if tabs--id}}
+    role="region"
     id="{{{tabs--id}}}"
   {{/if}}>
   {{> @partial-block}}
