--- a/src/patternfly/components/Dropdown/dropdown.scss
+++ b/src/patternfly/components/Dropdown/dropdown.scss
@@ -345,6 +345,7 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     .#{$dropdown}__toggle-check {
       display: inline-flex;
       align-items: center;
+      align-self: stretch;
       cursor: pointer;
 
       &.pf-m-in-progress {
