chore(roles): updated additional roles to match react

--- a/src/patternfly/components/AppLauncher/app-launcher-menu-item.hbs
+++ b/src/patternfly/components/AppLauncher/app-launcher-menu-item.hbs
@@ -1,4 +1,5 @@
 <{{# if app-launcher-menu-item--type}}{{app-launcher-menu-item--type}}{{else}}a{{/if}} class="{{pfv}}app-launcher__menu-item{{#if app-launcher-menu-item--modifier}} {{app-launcher-menu-item--modifier}}{{/if}}"
+  role="menuitem"
   {{#if app-launcher-menu-item--type}}
     type="button"
   {{/if}}
