--- a/src/patternfly/components/ContextSelector/context-selector-menu-list-item.hbs
+++ b/src/patternfly/components/ContextSelector/context-selector-menu-list-item.hbs
@@ -15,6 +15,7 @@
       disabled
     {{/if}}
   {{/if}}
+  role="menuitem"
   {{#if context-selector-menu-list-item--attribute}}
     {{{context-selector-menu-list-item--attribute}}}
   {{/if}}>
