--- a/src/patternfly/components/Tabs/tabs-link.hbs
+++ b/src/patternfly/components/Tabs/tabs-link.hbs
@@ -26,6 +26,7 @@
   {{~#if tabs-item--IsOverflowExpanded}}
     aria-expanded="true"
   {{/if}}
+  role="tab"
   {{#if tabs-link--attribute}}
     {{{tabs-link--attribute}}}
   {{/if}}>
