--- a/src/patternfly/components/Check/check.scss
+++ b/src/patternfly/components/Check/check.scss
@@ -16,14 +16,17 @@
   --#{$check}__label-required--FontSize: var(--#{$pf-global}--FontSize--sm);
   --#{$check}__label-required--Color: var(--#{$pf-global}--danger-color--100);
 
-  display: grid;
+  // display: grid;
+  display: inline-grid; // use inline grid for FF to recognize baseline alignment
   grid-template-columns: auto 1fr;
   grid-gap: var(--#{$check}--GridGap);
+  align-items: baseline;
+  width: 100%;
 
   &.pf-m-standalone {
     --#{$check}--GridGap: 0;
 
-    display: inline-grid;
+    // display: inline-grid;
   }
 }
 
@@ -43,6 +46,14 @@
 .#{$check}__body {
   grid-column: 2;
   margin-top: var(--#{$check}__body--MarginTop);
+}
+
+.#{$check}__input {
+  -moz-transform: translateY(5px);
+
+  .#{$check}.pf-m-standalone & {
+    -moz-transform: none;
+  }
 }
 
 .#{$check}__label,
