--- a/src/patternfly/components/Dropdown/dropdown.scss
+++ b/src/patternfly/components/Dropdown/dropdown.scss
@@ -343,9 +343,8 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     }
 
     .#{$dropdown}__toggle-check {
-      display: inline-flex;
-      align-items: center;
-      align-self: stretch;
+      align-items: baseline;
+      // align-self: stretch;
       cursor: pointer;
 
       &.pf-m-in-progress {
@@ -355,6 +354,7 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 
       > input,
       .#{$check} {
+        width: auto;
         cursor: pointer;
         visibility: var(--#{$dropdown}__toggle--m-split-button__toggle-check__input--Visibility, unset);
       }
@@ -608,8 +608,8 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 }
 
 .#{$dropdown}__toggle-button {
-  align-items: center;
-  align-self: stretch;
+  // align-items: center;
+  align-self: baseline;
 }
 
 .#{$dropdown}__toggle-text {
