--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -369,8 +369,8 @@
       --#{$check}__label--Color: currentcolor;
       --#{$check}__label--disabled--Color: currentcolor;
 
-      align-items: center;
-      align-self: stretch;
+      // align-items: center;
+      // align-self: stretch;
     }
 
     // Split button, active
