--- a/src/patternfly/components/Radio/radio.scss
+++ b/src/patternfly/components/Radio/radio.scss
@@ -13,18 +13,13 @@
   --#{$radio}__description--Color: var(--#{$pf-global}--Color--200);
   --#{$radio}__body--MarginTop: var(--#{$pf-global}--spacer--sm);
 
-  // display: grid;
-  display: inline-grid; // use inline flex for FF to recognize baseline alignment
+  display: grid;
   grid-template-columns: auto 1fr;
   grid-gap: var(--#{$radio}--GridGap);
-  // gap: var(--#{$radio}--GridGap);
   align-items: baseline;
-  width: 100%;
 
   &.pf-m-standalone {
     --#{$radio}--GridGap: 0;
-
-    // display: inline-grid;
   }
 }
 
@@ -36,7 +31,9 @@
 }
 
 .#{$radio}__input {
+  // stylelint-disable property-no-vendor-prefix
   -moz-transform: translateY(5px);
+  // stylelint-enable
 
   // fixes a chrome issue where the left edge is cut off in a container with overflow hidden
   &:first-child {
@@ -49,7 +46,9 @@
   }
 
   .#{$radio}.pf-m-standalone & {
+    // stylelint-disable property-no-vendor-prefix
     -moz-transform: none;
+    // stylelint-enable
   }
 }
 
