--- a/src/patternfly/components/Chip/chip-group.hbs
+++ b/src/patternfly/components/Chip/chip-group.hbs
@@ -1,4 +1,6 @@
 <div class="{{pfv}}chip-group{{#if chip-group--modifier}} {{chip-group--modifier}}{{/if}}"
+  role="group"
+  aria-label="Chip group category"
   {{#if chip-group--attribute}}
     {{{chip-group--attribute}}}
   {{/if}}>
