--- a/src/patternfly/components/Dropdown/dropdown.scss
+++ b/src/patternfly/components/Dropdown/dropdown.scss
@@ -243,9 +243,9 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 
 .#{$dropdown}__toggle {
   position: relative;
-  display: flex;
+  display: inline-flex;
   column-gap: var(--#{$dropdown}__toggle--ColumnGap);
-  align-items: center;
+  align-items: baseline;
   min-width: var(--#{$dropdown}__toggle--MinWidth);
   max-width: 100%;
   padding: var(--#{$dropdown}__toggle--PaddingTop) var(--#{$dropdown}__toggle--PaddingRight) var(--#{$dropdown}__toggle--PaddingBottom) var(--#{$dropdown}__toggle--PaddingLeft);
@@ -343,6 +343,7 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
     }
 
     .#{$dropdown}__toggle-check {
+      display: inline-flex;
       align-items: baseline;
       cursor: pointer;
 
@@ -607,7 +608,6 @@ $pf-v5-c-dropdown--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg"
 }
 
 .#{$dropdown}__toggle-button {
-  // align-items: center;
   align-self: baseline;
 }
 
